<resources>
    <string name="app_name">Movers</string>
    <string name="app_logo">App logo</string>
    <string name="client">Költözködő</string>
    <string name="mover">Költöztető</string>
    <string name="instruction_get_started">Költözkődő vagy Költöztető módban szeretné használni az alkalmazást?\n\nFolytatás mint:</string>
    <string name="instruction_phone_number">Adja meg telefonszámát, hogy felvehessük Önnel a kapcsolatot.</string>
    <string name="next">Tovább</string>
    <string name="verification">Verifikáció</string>
    <string name="instruction_verification_code">Adja meg az SMS-ben kapott verifikációs kódot.</string>
    <string name="resend_code">Kód újraküldése</string>
    <string name="verification_code">Verifikációs kód</string>
    <string name="invalid_phone_number">Érvénytelen telefonszám</string>
    <string name="registration">Regisztráció</string>
    <string name="save">Mentés</string>
    <string name="title_activity_maps">Map</string>
    <string name="locations">Lakcímek</string>
    <string name="phone_number_helper">Formátum: +36 20 123 4567</string>
    <string name="user_type_selection">Felhasználó típus kiválasztása</string>
    <string name="step_one">1. lépés</string>
    <string name="phone_number">Telefonszám</string>
    <string name="back">Vissza</string>
    <string name="step_two">2. lépés</string>
    <string name="invalid_verification_code">Érvénytelen kód</string>
    <string name="step_three">3. lépés</string>
    <string name="email">Email</string>
    <string name="first_name">Keresztnév</string>
    <string name="last_name">Vezetéknév</string>
    <string name="instruction_personal_information">Adja meg személyes adatait.</string>
    <string name="required">*Kötelező</string>
    <string name="name">Név</string>
    <string name="invalid_email">Érvénytelen email cím</string>
    <string name="pickup_location">Költözködés innen</string>
    <string name="dropoff_location">Költözködés ide</string>
    <string name="use_current_location_as_pickup_location">Szeretné jelenlegi tartózkodási helyét lakcímeként beállítani?</string>
    <string name="yes">Igen</string>
    <string name="no">Nem</string>
    <string name="step_four">4. lépés</string>
    <string name="instruction_locations">Adja meg, honnan hová szeretne költözködni.</string>
    <string name="sending_code">Kód elküldése folyamatban...</string>
    <string name="contact">Elérhetőség</string>
    <string name="optional">*Opcionális</string>
    <string name="vehicle_type">Költöztető jármű típusa</string>
    <string name="step_five">5. lépés</string>
    <string name="instruction_vehicle_type">Adja meg, milyen jármű-típussal rendelkező Költöztetők között keressünk.\n\nEgyszerre több jármű-típus is megadható.</string>
    <string name="car">Személyautó</string>
    <string name="van">Kisteherautó</string>
    <string name="truck">Kamion</string>
    <string name="description_car">Néhány bőrönd esetén.</string>
    <string name="description_van">Egy teljes szoba esetén.</string>
    <string name="description_truck">Lakásköltöztetéshez.</string>
    <string name="step_six">6. lépés</string>
    <string name="instruction_time">Adja meg a költözködés tervezett időpontját.</string>
    <string name="date">Dátum</string>
    <string name="time">Időpont</string>
    <string name="instruction_more_locaction_information">További információk a helyszínekről.</string>
    <string name="step_seven">7. lépés</string>
    <string name="step_eight">8. lépés</string>
    <string name="extra_information">További információk</string>
    <string name="instruction_moving_details">Adja meg az elszállítandó tételeket és azok mennyiségét.\n\nPéldául: dobozok száma, szekrények száma, mosógép, hűtő, ágy, kanapé.\n\nA csomagokról fényképeket is csatolhat.</string>
    <string name="mover_selection">Költöztető kiválasztása</string>
    <string name="step_nine">9. lépés</string>
    <string name="instruction_select_your_mover">Válassza ki költöztetőjét!</string>
    <string name="login">Bejelentkezés</string>
    <string name="password">Jelszó</string>
    <string name="create_account">Fiók létrehozása</string>
    <string name="confirm_password">Megerősítés</string>

    <string name="country_prompt">Choose a country</string>
    <string name="password_helper_text">Legalább 8 karaktert használjon, és szerepeljenek köztük betűk, számok és szimbólumok is</string>
    <string name="enter_a_password">Adjon meg egy jelszót</string>
    <string name="confirm_your_password">Erősítse meg a jelszót</string>
    <string name="passwords_did_not_match">A jelszavak nem egyeznek. Próbálja újra.</string>
    <string name="enter_an_email">Adjon meg egy e-mail-címet</string>

    <string-array name="country_arrays">
        <item>Malaysia</item>
        <item>United States</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>

</resources>
